objects/EUR_ISP_Spend_Activity__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Activity_Amount__c</fullName>
        <label>Activity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Activity_End_Date__c</fullName>
        <label>Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Activity_Start_Date__c</fullName>
        <label>Activity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Available_Amount__c</fullName>
        <formula>EUR_ISP_Total_Activity_Amount__c -  EUR_ISP_Total_Matched__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Conditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Country_Code__c</fullName>
        <formula>TEXT(EUR_ISP_Spend_Activity_Type__r.EUR_ISP_Country_Code__c)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Dirty_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dirty Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Matched_Items__c</fullName>
        <label>Matched Items</label>
        <summarizedField>EUR_ISP_Settlement_Line__c.EUR_ISP_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_ISP_Settlement_Line__c.EUR_ISP_Spend_Item_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_ISP_Settlement_Line__c.EUR_ISP_Spend_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Matched__c</fullName>
        <label>Matched</label>
        <summarizedField>EUR_ISP_Settlement_Line__c.EUR_ISP_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_ISP_Settlement_Line__c.EUR_ISP_Spend_Item_Line__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_ISP_Settlement_Line__c.EUR_ISP_Spend_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After implementation</fullName>
                </value>
                <value>
                    <fullName>After implementation (pro rata p.a.)</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Beginning of contract</fullName>
                </value>
                <value>
                    <fullName>Beginning of Contract item period</fullName>
                </value>
                <value>
                    <fullName>Beginning of contract period</fullName>
                </value>
                <value>
                    <fullName>Beginning of item period</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
                <value>
                    <fullName>End of contract</fullName>
                </value>
                <value>
                    <fullName>Half-Yearly After Implementation</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>No Invoicing</fullName>
                </value>
                <value>
                    <fullName>Once off</fullName>
                </value>
                <value>
                    <fullName>Post-Event</fullName>
                </value>
                <value>
                    <fullName>Pre-Event</fullName>
                </value>
                <value>
                    <fullName>Pro rata p.a.</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Yearly after implementation</fullName>
                </value>
                <value>
                    <fullName>3rd party invoicing</fullName>
                </value>
                <value>
                    <fullName>50 Pre-Event / 50 Post-Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Sales_In_End_Date__c</fullName>
        <label>Sales in End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Sales_In_Start_Date__c</fullName>
        <label>Sales in Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Sales_Out_End_Date__c</fullName>
        <label>Sales out End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Sales_Out_Start_Date__c</fullName>
        <label>Sales out Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Settlement_Method__c</fullName>
        <label>Settlement Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Free Stock</fullName>
                </value>
                <value>
                    <fullName>On Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Activity_Type_Name__c</fullName>
        <formula>EUR_ISP_Spend_Activity_Type__r.EUR_ISP_Spend_Activity_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Activity Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Activity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spend Activity Type</label>
        <referenceTo>EUR_ISP_Spend_Activity_Type__c</referenceTo>
        <relationshipLabel>Spend Activities (EU)</relationshipLabel>
        <relationshipName>Spend_Activities_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend__c</fullName>
        <label>Spend</label>
        <referenceTo>EUR_ISP_Spend__c</referenceTo>
        <relationshipLabel>Spend Activities (EU)</relationshipLabel>
        <relationshipName>Spend_Activities_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ringfence</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Total_Activity_Amount__c</fullName>
        <formula>EUR_ISP_Activity_Amount__c + EUR_ISP_Total_Spend_Items_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Activity Amount + Total Spend Items Amount</inlineHelpText>
        <label>Total Activity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Total_Matched__c</fullName>
        <formula>EUR_ISP_Matched_Items__c +  EUR_ISP_Matched__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Matched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Total_Spend_Items_Amount__c</fullName>
        <label>Total Spend Items Amount</label>
        <summarizedField>EUR_ISP_Spend_Item__c.EUR_ISP_Total_Spend_Item__c</summarizedField>
        <summaryForeignKey>EUR_ISP_Spend_Item__c.EUR_ISP_Spend_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>EUR_ISP_Vendor__c</referenceTo>
        <relationshipLabel>Spend Activities (EU)</relationshipLabel>
        <relationshipName>Spend_Activities_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Spend Activity (EU)</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Spend Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Activities (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_ISP_Commercial_Plan</fullName>
        <active>true</active>
        <label>Commercial Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_Marketing_Project</fullName>
        <active>true</active>
        <label>Marketing Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_SFA_Contract</fullName>
        <active>true</active>
        <label>SFA Contract</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EUR_ISP_Spend_Activity_Dates</fullName>
        <active>true</active>
        <description>Spend Activity Dates must between within Spend Date range and Start Date must be set before End Date</description>
        <errorConditionFormula>AND(
OR(
ISCHANGED(EUR_ISP_Activity_Start_Date__c),
ISCHANGED(EUR_ISP_Activity_End_Date__c),
ISCHANGED(EUR_ISP_Sales_In_Start_Date__c),
ISCHANGED(EUR_ISP_Sales_In_End_Date__c),
ISCHANGED(EUR_ISP_Sales_Out_Start_Date__c),
ISCHANGED(EUR_ISP_Sales_Out_End_Date__c)
),

OR(
EUR_ISP_Activity_Start_Date__c &lt;  EUR_ISP_Spend__r.EUR_ISP_Start_Date__c,
EUR_ISP_Activity_End_Date__c &gt;  EUR_ISP_Spend__r.EUR_ISP_End_Date__c,
EUR_ISP_Activity_Start_Date__c &gt; EUR_ISP_Activity_End_Date__c,
EUR_ISP_Sales_In_Start_Date__c &lt;  EUR_ISP_Spend__r.EUR_ISP_Start_Date__c,
EUR_ISP_Sales_In_End_Date__c &gt;  EUR_ISP_Spend__r.EUR_ISP_End_Date__c,
EUR_ISP_Sales_In_Start_Date__c &gt; EUR_ISP_Sales_In_End_Date__c,
EUR_ISP_Sales_Out_Start_Date__c &lt;  EUR_ISP_Spend__r.EUR_ISP_Start_Date__c,
EUR_ISP_Sales_Out_End_Date__c &gt;  EUR_ISP_Spend__r.EUR_ISP_End_Date__c,
EUR_ISP_Sales_Out_Start_Date__c &gt; EUR_ISP_Sales_Out_End_Date__c
)

)</errorConditionFormula>
        <errorMessage>Spend Activity Dates must between within Spend Date range and Start Date must be set before End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUR_ISP_Spend_Activity_Matched_Amount</fullName>
        <active>true</active>
        <description>Can’t reduce to below the matched amount</description>
        <errorConditionFormula>EUR_ISP_Total_Activity_Amount__c &lt;  EUR_ISP_Matched__c</errorConditionFormula>
        <errorDisplayField>EUR_ISP_Activity_Amount__c</errorDisplayField>
        <errorMessage>Can’t be reduced below already matched amount</errorMessage>
    </validationRules>
</CustomObject>